--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,78 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: #282c34;
+  font-size: calc(10px + 1vmin);
+  color: white;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Modal-section {
+  display: flex;
+  color: #333;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  position: fixed;
+  background-color: white;
+  flex-direction: column;
+  transition: all 300ms ease-in-out;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.Modal-section--visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.Modal-header {
+  display: flex;
+  border-bottom: 1px solid #ccc;
+  padding: 0.5em 1em;
+}
+
+.Modal-title {
+  flex: 1;
+}
+
+.Modal-main {
+  padding: 1em;
+}
+
+.Modal-close {
+  opacity: 0.5;
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  transition: all 0.2s ease-in-out;
+}
+
+.Modal-close:hover {
+  opacity: 1;
+  color: black;
 }
