--- a/src/App.css
+++ b/src/App.css
@@ -9,14 +9,13 @@
   display: flex;
   width: 100vw;
   height: 100vh;
-  align-items: center;
-  justify-content: center;
   flex-direction: column;
 }
 
 @media (min-width: 768px) {
   .App {
     font-size: 14px;
+    align-items: stretch;
   }
 }
 
@@ -29,7 +28,7 @@
 }
 
 .App-main {
-  flex: 1;
+  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -126,4 +125,56 @@
   gap: 0.5em;
   grid-column: 1 / 3;
   justify-content: flex-end;
+}
+
+.Filters_Summary-section {
+  padding: 0 1em;
+  align-self: stretch;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  background-color: white;
+  color: black;
+  border-radius: 0.5em;
+  gap: 0.5em;
+}
+
+.Filters_Summary-section .Filters_Summary_Content-div {
+  flex: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.Filters_Summary-section .Filters_Summary-ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 1em;
+}
+
+.Products_List-table {
+  border-radius: 0.5em;
+  overflow: hidden;
+  background-color: white;
+  color: black;
+  align-self: stretch;
+  border-collapse: collapse;
+}
+
+.Products_List-table .Products_List-th {
+  padding: 1em;
+  text-align: left;
+  border-bottom: 1px solid #ccc;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.Products_List-table .Products_List-tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.Products_List-table .Products_List-td {
+  padding: 1em;
+  border-left: 1px solid #ccc;
 }
